# galvanized

./: .gitignore  Cargo.toml  README.md  prototype.html
crates/app-galvanized/: Cargo.toml
crates/app-galvanized/src/: app_behavior.rs  lib.rs  users.rs
crates/app-galvanized/src/panel/: mod.rs
crates/app-galvanized/src/views/: connections.rs  mod.rs  panel_root.rs  user_login.rs  vault_login_item.rs
crates/app_galvanized/: Cargo.toml
crates/app_galvanized/src/: lib.rs  profiles.rs
crates/app_galvanized/src/components/: dropdown.rs  mod.rs  profile_bar.rs  profile_login_picker.rs  space_header.rs
crates/app_galvanized/src/views/: connections.rs  create_profile_item.rs  create_profile_modal.rs  create_space_modal.rs  mod.rs  panel.rs  panel_root.rs  profile_login.rs
crates/csh-demo/: Cargo.toml
crates/csh-demo/src/: calendar.rs  chat_bubble.rs  lib.rs
crates/iroh-automerge/: Cargo.toml
crates/iroh-automerge/src/: iroh_panel_ui.rs  iroh_repo.rs  lib.rs
crates/iroh-ui/: Cargo.toml
crates/iroh-ui/src/: iroh_automerge_chat_ui.rs  iroh_panel_ui.rs  iroh_topic_chat_ui.rs  lib.rs  willow.rs
crates/libp2p-ui/: Cargo.toml
crates/libp2p-ui/src/: lib.rs  p2p.rs
crates/plugin-calendar/: Cargo.toml
crates/plugin-calendar/src/: lib.rs
crates/plugin-chat/: Cargo.toml
crates/plugin-chat/src/: lib.rs
crates/plugin-connections/: Cargo.toml
crates/plugin-contacts/: Cargo.toml
crates/plugin-contacts/src/: lib.rs
crates/plugin-files/: Cargo.toml
crates/plugin-files/src/: lib.rs
crates/plugin-galvanized/: Cargo.toml
crates/plugin-galvanized/src/: app_behavior.rs  lib.rs  users.rs
crates/plugin-galvanized/src/domain/: mod.rs  profile.rs  space.rs  vault.rs  vaults.rs
crates/plugin-galvanized/src/panel/: mod.rs  omnibar.rs  onboarding.rs  profile_bar.rs  profile_nugget.rs  scene_create_profile.rs  scene_create_space.rs  scene_vault.rs  user_login.rs  vault_menu.rs
crates/plugin-iroh/: Cargo.toml
crates/plugin-iroh/src/: iroh_repo.rs  lib.rs
crates/plugin-theme-palette/: Cargo.toml
crates/plugin-theme-palette/src/: lib.rs
crates/plugin-vault/: Cargo.toml
crates/plugin-vault/assets/: vault.db
crates/plugin-vault/migrations/: 20260521032440_vaults.sql
crates/plugin-vault/src/: encryption.rs  error.rs  lib.rs  secret_cap.rs  secret_repository.rs  unlock_ui.rs  vault_actor.rs  vault_cap.rs  vault_data.rs  vault_data2.rs  vault_db.rs
crates/plugin-vault/src/secret_repository/: mod.rs
crates/plugin-vault/src/secret_repository/encrypted_repository/: encryption.rs  mod.rs
crates/plugin-vault/src/vault_actor/: create_vault.rs  list_vaults.rs  lock_vault.rs  mod.rs  read_metadata.rs  read_vault.rs  unlock_vault.rs  update_vault.rs
crates/plugin-willow/: Cargo.toml
crates/plugin-willow/src/: lib.rs  model.rs  profile.rs  subspace.rs  ui.rs  willow_serde.rs
crates/plugin-willow/src/tasks/: willow_task.rs
crates/strict-cap/: Cargo.toml
crates/strict-cap/src/: lib.rs
crates/tagged/: Cargo.toml
crates/tagged/src/: chat.rs  contacts.rs  function_widget.rs  lib.rs  object_widget.rs
crates/tagged/src/components/: profile_bar.rs  space_icon.rs
crates/tagged/src/iroh/: mod.rs
crates/tagged/src/scenes/: onboarding_item.rs  tagged_panel.rs
crates/tagged/src/state/: mod.rs  onboarding.rs  profile.rs  space.rs
crates/tagged/src/views/: connections.rs  create_profile_modal.rs  create_space_modal.rs  mod.rs  tagged_panel.rs
crates/tagged/src/willow/: button_input.rs  mod.rs  model.rs  object_widget.rs  profile.rs  space.rs
crates/tagged/src/willow/tasks/: willow_task.rs
crates/unused_csh-demo/: Cargo.toml
crates/unused_csh-demo/src/: chat_bubble.rs  lib.rs
crates/unused_iroh-automerge/: Cargo.toml
crates/unused_iroh-automerge/src/: iroh_panel_ui.rs  iroh_repo.rs  lib.rs
crates/unused_libp2p-ui/: Cargo.toml
crates/unused_libp2p-ui/src/: libp2p_pane.rs
crates/unused_misc/: Cargo.toml
crates/unused_willow-api-derive/: Cargo.toml
crates/unused_willow-rummager/src/: willow_ui.rs
crates/willow-api-derive/: Cargo.toml
crates/willow-api-derive/src/: lib.rs
crates/willow-rummager/: Cargo.toml
crates/willow-rummager/src/: willow_panel.rs
migrations/: 20260521045144_vaults.sql
prototypes/: main1.html  main2.html  main3.html  onboarding_in_panel.html
src/: lib.rs  willow_panel_settings.rs
