[package]
name = "iroh-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
automerge = "0.7.2"
bytes = "1.11.0"
data-encoding = "2.10.0"
derive_more = "2.1.0"
flume = "0.12.0"
hex = "0.4.3"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
iroh-blobs = "0.97.0"
iroh-docs = "0.95.0"
iroh-gossip = "0.95.0"
rand = "0.9.2"
samod = { version = "0.5.1", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.48.0"
tokio-util = "0.7.17"
tracing = "0.1.43"
zed = { path = "../../../zed2/crates/zed" }
