[package]
name = "libp2p-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
culpa.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
libp2p-swarm.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zed.workspace = true

# willow-store-simple-sled = { path = "../store_simple_sled" }
