[package]
name = "plugin-connections"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
data-encoding.workspace = true
iroh.workspace = true
plugin-chat.workspace = true
plugin-p2p.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zed.workspace = true
