[package]
name = "plugin-iroh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
automerge.workspace = true
dashmap.workspace = true
iroh.workspace = true
iroh-automerge.workspace = true
samod.workspace = true
tokio.workspace = true
tracing.workspace = true
zed.workspace = true
