[package]
name = "plugin-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
capsec.workspace = true
capsec-core.workspace = true
crypto-common.workspace = true
derive_more.workspace = true
dirs.workspace = true
flume.workspace = true
futures.workspace = true
rand_0_8_5.workspace = true
rand_core.workspace = true
rand_core_0_6_4.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
willow25.workspace = true
zed.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
