[package]
name = "plugin-willow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["display", "debug"] }
futures-concurrency.workspace = true
hex.workspace = true
plugin-vault.workspace = true
rand_core_0_6_4.workspace = true
schemars.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true
willow25.workspace = true
zed.workspace = true
